albrecht transparency updated

--- a/child_pages/cc-elections/Candidates/albrecht.html
+++ b/child_pages/cc-elections/Candidates/albrecht.html
@@ -120,7 +120,7 @@
                 <br>
                 <br>
                 Albrecht is a familiar face in the community and regularly attends the Republican organization’s bi-weekly breakfast events—offering consistent, in-person access to 
-                constituents. However, his campaign remains light on comprehensive public materials, with no formal website or detailed policy documentation currently available for the 
+                constituents. However, his campaign remains light on comprehensive public materials, with no formal website or detailed policy/agenda explanations currently available for the 
                 2025 race. Despite his visibility, voters without direct access to local events may struggle to clearly understand his full platform or how it compares to his opponents.
                 <br>
                 <br>
@@ -137,52 +137,62 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
-              <h6 class="page-title">John P. Capizola</h6>
+              <h6 class="page-title">Douglas Albrecht</h6>
               <p>          
 
-                Douglas Albrecht is currently serving his second term on the Cumberland County Board of Commissioners and is seeking a third. With extensive involvement in local 
-                governance—including roles on the county Finance Committee, Library Board, Board of Elections, and the Recreation and Bayshore Councils—he presents as a knowledgeable, 
-                civically active representative with strong community ties and a deep understanding of county-level challenges.
+                Douglas Albrecht is a two-term incumbent seeking a third term on the Cumberland County Board of Commissioners. He’s an active, visible figure in local politics, 
+                regularly attending Republican breakfasts, participating in county events, and co-hosting a weekly radio show. His biography on the Republican Party’s website 
+                identifies key issues he’s involved with—such as public health, literacy, income inequality, taxation, tourism, and infrastructure projects like the county park system.
                 <br>
                 <br>
-                Which makes it all the more important to assess his transparency through the lens of not whether he’s active, but how effectively he communicates his campaign platform to 
-                the public at large.
+                Unlike some candidates who remain largely invisible, Albrecht is clearly engaged. He mentions real problems and references specific efforts he’s been involved in, 
+                giving voters the impression that he has his finger on the pulse of county concerns. But despite this, his messaging stops short of full transparency.
                 <br>
                 <br>
-                In many ways, Albrecht is among the more visible candidates in Cumberland County. He is known to be highly present in the community and regularly attends the Cumberland 
-                County Regular Republican Organization’s bi-weekly breakfasts—events that offer roughly two dozen opportunities a year for voters to engage directly with Republican leaders 
-                and candidates. By comparison to the sporadic or non-existent outreach from the local Democratic Party, this structure alone is a significant advantage in accessibility.
+                His current communications are spread across scattered formats—radio segments, public bios, and in-person comments at GOP events. There’s no comprehensive, easily 
+                accessible platform where voters can review his stances, see his legislative priorities, or understand how his proposals compare with those of his opponents.
                 <br>
                 <br>
-                However, accessibility in-person does not automatically translate to accessibility in messaging. While Albrecht has had multiple opportunities to participate in this 
-                platform’s efforts to document candidate agendas, policy stances, and side-by-side comparisons, he has not provided comprehensive campaign materials, filled out 
-                questionnaires, or shared detailed updates that would allow voters to easily review his comprehensive views on well known county issues outside of attending a breakfast or 
-                reading general summaries on the CCRRO website.
+                For example:
+                <ul>
+                    <li>He identifies persistent problems like poor health and low literacy, but doesn’t explain whether conditions have improved during his tenure or what concrete 
+                        next steps he supports.
+                    </li>
+
+                    <li>He points to issues like tax burden, election costs, and NJDEP constraints, but doesn’t offer forward-looking solutions or acknowledge tradeoffs.
+                    </li>
+
+                    <li>He celebrates progress like the library renovation and county park momentum, but doesn’t provide context for why these projects were prioritized or how 
+                        they’re being evaluated—especially when some critics have questioned their fiscal impact.
+                    </li>
+                </ul>
+
                 <br>
                 <br>
-                Shortly after one of our speech's was given at one of the County Commissioner meetings encouraging countywide participation in a nonpartisan information process like the one 
-                on this site, Albrecht expressed that such a proposal might risk "micro-managing campaigns." While that’s a valid concern in the abstract, it doesn't change the reality that 
-                public officials—especially incumbents—should already be making their stances easy to find and compare. Furthermore, at a similar meeting, former Commissioner Director Sileo 
-                suggested doing a quarterly report to let the public know where we're at with progress on ongoing issues. That would be great, but we are unaware if that has actually 
-                been started. Similarly, current Commissioner Director Sauro stated the Commissioner Board is working on a general PR campaign, though we are not sure if that is still a 
-                work in progress, or is in reference to sporadic press releases on the County Site's homepage.
+
+                To move from “generally visible” to “fully transparent,” the solution is within easy reach:
+                <ul>
+                    <li>A centralized website with clear issue positions and project updates.
+                    </li>
+
+                    <li>Podcast-style interviews where voters can hear him speak in-depth on priorities.
+                    </li>
+
+                    <li>Participation in nonpartisan candidate forums to allow for side-by-side comparison.
+                    </li>
+                </ul>
+
                 <br>
                 <br>
-                It’s also worth noting that Albrecht, as a long-serving commissioner, should be one of the most equipped candidates to provide issue-based comparisons between himself and his 
-                opponents. He has the context, the background, and the experience. So why not write it down? Why not give voters something they can digest, revisit, and share with others?
+
+                As a long-serving commissioner who is regularly in the room where decisions are made, Albrecht has the experience and access to articulate a complete case for 
+                reelection—but that case should be laid out comprehensively in a centralized location like a website that meets modern voters expectations.
+
                 <br>
                 <br>
-                To be clear: Albrecht's public presence and general availability place him above many of his peers when it comes to accessibility. He attends events, speaks to constituents, 
-                and provides periodic updates. But in a digital age where voters need centralized, persistent, and easily shareable campaign information, these in-person efforts, while 
-                commendable, aren’t enough on their own.
-                <br>
-                <br>
-                That said, the door is always open to raise this rating. Submitting a completed candidate questionnaire, participating in a podcast-style interview, or providing a formal 
-                breakdown of positions on major county issues would go a long way in making his campaign more transparent and accessible to the public—particularly for those who can’t 
-                attend bi-weekly breakfasts or don’t travel in political circles.
-                <br>
-                <br>
-                For these reasons, Albrecht currently receives a rating that falls between average and above average for transparency and accessibility.
+
+                For these reasons, Albrecht currently receives an “average to above average” transparency rating—with the understanding that a few focused improvements could put him 
+                in the top tier of voter accessibility and accountability.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
