--- a/child_pages/cc-elections/commercial_township_committee.html
+++ b/child_pages/cc-elections/commercial_township_committee.html
@@ -176,7 +176,14 @@
 
         <button class="quick-summary-reopen">quick election summary</button>
                 
-                
+        <br>
+
+        <a href="../cc-elections/commercial_township_transparency_chart.html"
+                style="display: block; text-align: center; font-size: 1.5rem; margin: 2rem 0; font-weight: bold; color: #004080; text-decoration: none;">
+                Candidate Transparency/Accessibility Chart
+        </a>
+
+        <br>
                     <div class="sb-top-box"> 
                         <h4>REPUBLICAN</h4>
                         <h6>REPUBLICANO</h6>  
