lods transparency updated

--- a/child_pages/cc-elections/Candidates/lods.html
+++ b/child_pages/cc-elections/Candidates/lods.html
@@ -398,40 +398,58 @@
               <h6 class="page-title">Victoria Lods</h6>
               <p>          
 
-                Victoria Lods is currently serving her first term on the Cumberland County Board of Commissioners. With a professional background that spans communications, education, state 
-                government, and agriculture, she brings a diverse and practical skill set to the board. Her previous roles include serving as chief of staff to a state senator, executive 
-                director of Cumberland County Habitat for Humanity, and a teacher at both Bridgeton and Millville High Schools. She’s also a fifth-generation resident of her family’s 
-                South Jersey farm, deeply rooted in the community she serves.
+                Victoria Groetsch-Lods is currently serving her first term on the Cumberland County Board of Commissioners and is seeking reelection. Her public bio highlights her deep 
+                community ties, a strong resume in public service, and a general focus on important issues like education, agriculture, and services for mental health and addiction. She also 
+                brings experience from prior legislative roles, having served as chief-of-staff in the state senate and as the first executive director of Cumberland County Habitat for 
+                Humanity.
                 <br>
                 <br>
-                Lods has maintained a visible presence during her time in office, regularly attending Republican bi-weekly breakfast events and staying engaged with local constituents. 
-                When approached, she is friendly, articulate, and more than willing to converse—traits that make her approachable in person.
+                However, while her bio clearly shows that she is engaged and has a strong understanding of county operations, the messaging stops short of laying out a full, voter-friendly 
+                action plan.
                 <br>
                 <br>
-                However, like most local candidates in this cycle, her public campaign infrastructure hasn’t caught up with what voters now expect in 2025. There’s currently no campaign 
-                website specifically for her, no comprehensive platform summary, and no participation in centralized efforts to provide side-by-side comparisons or deeper policy discussions.
+                She briefly states that she has championed issues like education and agriculture, but it’s unclear what progress has been made so far or what she plans to do next. For 
+                example:
+
+                <ul>
+                    <li>She mentions having helped maximize school funding in the past, but what is her plan to secure or improve funding moving forward?</li>
+
+                    <li>She notes that she has a “keen understanding” of how government layers work together to get things done—but what does that mean for voters today? Is she applying 
+                        that knowledge to current county challenges like broadband, housing, public health, or economic development?
+                    </li>
+                </ul>
+
                 <br>
                 <br>
-                And that’s the real disconnect—not just with Lods, but across the board: while face-to-face conversations and live events are valuable, they no longer satisfy the modern 
-                expectation of accessible, on-demand information. In a digital era where voters ought to be able track infrastructure projects like the Middle Mile Broadband initiative 
-                somewhat regularly, they’re also looking for candidates who proactively address those same issues with clear, documented perspectives... without necessarily reviewing 
-                every county, city, school board, and state meeting.
+                She also references her role in stimulating economic development during her previous tenure in Trenton, which is certainly relevant—but again, there’s no detailed explanation 
+                of what that experience has translated into during her time as commissioner, or what she hopes to do next.
+
                 <br>
                 <br>
-                This becomes even more noticeable in Lods’ case, given her academic background in Communications and Journalism—fields built around the importance of message clarity and 
-                audience reach. One might expect someone with that training to do more to help bridge the gap between traditional campaigning and 21st-century civic transparency. Yet, we 
-                still lack a centralized reference point for her current priorities, stances, or comparisons to her opponents.
+                In short, Lods appears to be fully capable and already doing the work, which would make it all the more effective if she spelled out her ongoing priorities and how her skill 
+                set sets her apart from her challengers. Compared to her likely general election opponents:
+
+                <ul>
+                    <li>Capizola doesn’t even mention current issues in his public bio.</li>
+
+                    <li>Balicki references support for the arts, but not much more in terms of local policy.
+                    </li>
+
+                    <li>Smith currently has no updated campaign materials available.
+                    </li>
+                </ul>
+
                 <br>
                 <br>
-                To be fair, she is far more present than candidates who remain completely out of view—but without more centrally accessible, digital campaign messaging, even an engaged 
-                candidate can feel distant to the average voter.
+
+                If Lods clearly documented her vision in a centralized campaign website—complete with issue breakdowns, podcast-style interviews, and participation in events like candidate 
+                forums—she would make a very strong case for why she is not only already doing the job, but the obvious choice to continue doing it well.
+
                 <br>
                 <br>
-                That said, the opportunity to improve remains fully open. A completed questionnaire, a podcast interview, and a detailed list of policy positions on key county issues 
-                would go a long way toward increasing her transparency score.
-                <br>
-                <br>
-                For these reasons, Victoria Groetsch-Lods currently receives an almost above average rating for transparency and accessibility.
+
+                For now, she receives an “average” transparency rating—based on visible public presence and clear experience—but with a very reachable path to move into full transparency with 
+                just a bit more intention and structure.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
