--- a/child_pages/cc-elections/county_commissioners_transparency_chart.html
+++ b/child_pages/cc-elections/county_commissioners_transparency_chart.html
@@ -193,17 +193,17 @@
           <span class="label">Response to Outreach:</span><span class="value">⚠️ Some dialogue, no formal materials</span>
           <span class="label">Voter Info Participation:</span><span class="value">❌ No structured participation yet</span>
           <span class="label">Public Appearances:</span><span class="value">✅ Regular at GOP breakfasts</span>
-          <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Mentioned at events, not documented</span>
+          <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Mentioned at events, brief mentions on party site, not comprehensively documented</span>
           <div class="rating">Rating: <strong>Average to Above Average</strong></div>
         </div>
       
         <div class="candidate-card">
           <h3>Victoria Groetsch-Lods</h3>
-          <span class="label">Public Platform:</span><span class="value">❌ None shared</span>
+          <span class="label">Public Platform:</span><span class="value">⚠️ Party bio, no full platform</span>
           <span class="label">Response to Outreach:</span><span class="value">⚠️ Aware, but no direct participation</span>
           <span class="label">Voter Info Participation:</span><span class="value">❌ Not yet engaged</span>
           <span class="label">Public Appearances:</span><span class="value">✅ Frequently seen, especially at GOP events</span>
-          <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Some informal mentions, no record</span>
+          <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Mentioned at events, brief mentions on party site, not comprehensively documented</span>
           <div class="rating">Rating: <strong>Slightly Below Average</strong></div>
         </div>
       
