cc transparency update again

--- a/child_pages/cc-elections/county_commissioners_transparency_chart.html
+++ b/child_pages/cc-elections/county_commissioners_transparency_chart.html
@@ -193,7 +193,7 @@
           <h3>Douglas Albrecht</h3>
           <span class="label">Public Platform:</span><span class="value">⚠️ Party site general messaging, no full platform</span>
           <span class="label">Response to Outreach:</span><span class="value">⚠️ Some intentions to correspond, no follow through yet</span>
-          <span class="label">Voter Info Participation:</span><span class="value">⚠️ Brief messaging at breakfasts, nothing in-depth that we're aware of</span>
+          <span class="label">Voter Info Participation:</span><span class="value">⚠️ Brief messaging at breakfasts, maybe archived interviews exist?</span>
           <span class="label">Public Appearances:</span><span class="value">✅ Regular at GOP breakfasts</span>
           <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Mentioned at events, brief mentions on party site, not comprehensively documented</span>
           <div class="rating">Rating: <strong>Average to Above Average</strong></div>
@@ -202,8 +202,8 @@
         <div class="candidate-card">
           <h3>Victoria Groetsch-Lods</h3>
           <span class="label">Public Platform:</span><span class="value">⚠️ Party general messaging, no full platform</span>
-          <span class="label">Response to Outreach:</span><span class="value">⚠️ Aware, but no direct participation</span>
-          <span class="label">Voter Info Participation:</span><span class="value">⚠️ Brief messaging at breakfasts, nothing in-depth that we're aware of</span>
+          <span class="label">Response to Outreach:</span><span class="value">❌ Aware, but no direct participation</span>
+          <span class="label">Voter Info Participation:</span><span class="value">⚠️ Brief messaging at breakfasts, maybe some archived interviews exist?</span>
           <span class="label">Public Appearances:</span><span class="value">✅ Frequently seen, especially at GOP events</span>
           <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Mentioned at events, brief mentions on party site, not comprehensively documented</span>
           <div class="rating">Rating: <strong>Slightly Below Average</strong></div>
