tisa update test

--- a/child_pages/cc-elections/commercial_township_transparency_chart.html
+++ b/child_pages/cc-elections/commercial_township_transparency_chart.html
@@ -179,7 +179,7 @@
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
           As of now, neither candidate has provided a public campaign platform. The Republican Party’s endorsement of Welch raises additional questions about transparency 
-          in the nomination process.
+          in the nomination process in the sense that someone at least knows who Welch is, we just haven't seen or heard anything about him.
           <br>
           <br>
           A brief review of our methods: We send snail mail and emails to the candidates via addresses they provided to the county clerk. We regularly attend political meetings and 
