--- a/child_pages/cc-elections/downe_township_transparency_chart.html
+++ b/child_pages/cc-elections/downe_township_transparency_chart.html
@@ -178,7 +178,8 @@
     <div class="comparison-wrapper">
         <h2>Quick Transparency Breakdown</h2>
         <div class="summary-note">
-          Based on available information, Sean Pignatelli is the only candidate providing a clear, accessible campaign.
+          Based on available information, Sean Pignatelli is the only candidate providing a clear, accessible campaign. Given that the Cumberland County Regular Republican Organization has 
+          endorsed two other candidates, we assume they have information about those candidates, we have just been unable to find anything. 
           <br>
           <br>
           A brief review of our methods: We send snail mail and emails to the candidates via addresses they provided to the county clerk. We regularly attend political meetings and 
