lawrence transparency chart tweak

--- a/child_pages/cc-elections/lawrence_township_transparency_chart.html
+++ b/child_pages/cc-elections/lawrence_township_transparency_chart.html
@@ -198,7 +198,7 @@
           <span class="label">Voter Info Participation:</span><span class="value">⚠️ Regularly visible through township meetings, No materials, vague forum response</span>
           <span class="label">Public Appearances:</span><span class="value">✅ Frequent at Republican breakfasts</span>
           <span class="label">Local Issue Messaging:</span><span class="value">⚠️ Occasionally mentioned informally at breakfasts or scattered through township meetings</span>
-          <div class="rating">Rating: <strong>Below Average</strong></div>
+          <div class="rating">Rating: <strong>Below Average to Average</strong></div>
         </div>
       </div>
 
