interview summary in details tag test

--- a/index.html
+++ b/index.html
@@ -342,6 +342,85 @@
             <h3 class="video-heading-sm"></h3>
             <div class="video-sm-desc">
                 An in depth interview with Democratic Primary candidates for General Assembly, Brandon Saffold and Carolyn Rush.
+                <details>
+                    <summary><strong>Click to view full interview summary (timestamps and topics)</strong></summary>
+                    <div class="video-summary" style="margin-top: 1em;">
+                      <h2>Interview Summary – Brandon Saffold & Carolyn Rush</h2>
+                      <p>This table highlights the key topics covered in the 2.5-hour interview, summarizing major takeaways per section.</p>
+                  
+                      <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                        <thead>
+                          <tr>
+                            <th style="text-align: left;">Timestamp</th>
+                            <th style="text-align: left;">Topic</th>
+                            <th style="text-align: left;">Key Takeaways</th>
+                          </tr>
+                        </thead>
+                        <tbody>
+                          <tr>
+                            <td>0:00</td>
+                            <td>Introductions</td>
+                            <td>Candidates explain who they are, why they're running, and how transparency drives their campaigns.</td>
+                          </tr>
+                          <tr>
+                            <td>1:07:47</td>
+                            <td>Fiscal Outlook</td>
+                            <td>Discuss NJ’s looming deficit, federal funding risks, and concerns with vague tax-cut promises.</td>
+                          </tr>
+                          <tr>
+                            <td>1:13:33</td>
+                            <td>Reproductive Rights</td>
+                            <td>Support abortion access with limits at viability and doctor involvement—oppose political interference.</td>
+                          </tr>
+                          <tr>
+                            <td>1:23:04</td>
+                            <td>Mental Health</td>
+                            <td>Push for guardianship reform, inspections of care facilities, and stronger rehab accountability (Save Nina Act).</td>
+                          </tr>
+                          <tr>
+                            <td>1:35:02</td>
+                            <td>Policing & Crime</td>
+                            <td>Crime seen as a social issue; advocate more training, support, and mental health integration into response units.</td>
+                          </tr>
+                          <tr>
+                            <td>1:39:01</td>
+                            <td>LGBTQ+ Rights</td>
+                            <td>Support live-and-let-live approach; Brandon proposes separate leagues for trans athletes in competition fairness.</td>
+                          </tr>
+                          <tr>
+                            <td>1:46:31</td>
+                            <td>Policy 5756 (Trans Student Rights)</td>
+                            <td>Support student privacy; oppose forced outing; argue that law protects vulnerable youth—not promotes secrecy.</td>
+                          </tr>
+                          <tr>
+                            <td>1:57:03</td>
+                            <td>SALT Deduction</td>
+                            <td>Want federal cap reversed to relieve NJ residents; view current setup as unfair targeting of blue states.</td>
+                          </tr>
+                          <tr>
+                            <td>2:05:01</td>
+                            <td>Legislative Integrity</td>
+                            <td>Carolyn vows to vote conscience over party coercion—even if it risks local funding; transparency is non-negotiable.</td>
+                          </tr>
+                          <tr>
+                            <td>2:06:03</td>
+                            <td>Civics Education</td>
+                            <td>Propose reintroducing state-level civics curriculum with local government education and a graduation requirement.</td>
+                          </tr>
+                          <tr>
+                            <td>2:07:38</td>
+                            <td>Candidate Transparency System</td>
+                            <td>Support centralized nonpartisan platform for questionnaires, interviews, and events hosted by the county.</td>
+                          </tr>
+                          <tr>
+                            <td>2:08:48</td>
+                            <td>Restoring Local Press</td>
+                            <td>Explore ways to address Cumberland’s information desert and reestablish consistent civic journalism.</td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </details>
             </div>
         </div>
 
