saffold and rush agenda updates

--- a/child_pages/cc-elections/Candidates/rush.html
+++ b/child_pages/cc-elections/Candidates/rush.html
@@ -340,6 +340,22 @@
             <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
                 <ul>
+                    <li>Fair elections through office block ballots and transparent campaigns</li>
+                    <br>
+                    <li>Ensure affordable housing through stronger enforcement of the Mount Laurel doctrine</li>
+                    <br>
+                    <li>Support safe staffing in healthcare for both veterans and seniors</li>
+                    <br>
+                    <li>Reform zoning laws to enable multi-unit affordable developments</li>
+                    <br>
+                    <li>Maintain toll roads but redirect toll revenue to benefit South Jersey infrastructure</li>
+                    <br>
+                    <li>Protect asylum seekers and reform immigration wait times with due process</li>
+                    <br>
+                    <li>Encourage smarter legislation rather than party-line voting</li>
+                    <br>
+                    <li>Champion community-based legislative leadership over top-down influence</li>
+                    <br>
                     <li>Increase transparency in government and campaigning</li>
                     <br>
                     <li>Promote fiscal responsibility and conscientious tax policy</li>
@@ -385,9 +401,10 @@
 
             <h4 class="sub-heading">Bio and Experience</h4>
                 <div class="experience can-sec">
-                    Carolyn Rush is a passionate advocate for transparency and integrity in public service. A mother who has personally faced challenges with the state’s health care and 
-                    mental health systems, Carolyn brings a deeply personal perspective to public policy. With a strong sense of accountability and moral conviction, she pledges to vote 
-                    with her conscience rather than follow party pressure, and prioritizes building public trust in government.
+                    Carolyn Rush is a retired systems and software engineer with decades of experience managing large-scale projects for Lockheed Martin and the company behind EZ-Pass. 
+                    Now living in Cape May County as a mother and grandmother, she’s turned her focus to public service, driven by personal experiences navigating New Jersey’s healthcare 
+                    and mental health systems. Carolyn brings both technical expertise and deep moral conviction to her campaign, prioritizing transparency, government accountability, and 
+                    protecting essential services from political neglect.
                 </div>
    
     </div>
