--- a/child_pages/cc-elections/Candidates/saffold.html
+++ b/child_pages/cc-elections/Candidates/saffold.html
@@ -332,6 +332,22 @@
             <h4 class="sub-heading">Agenda</h4>
             <div class="experience can-sec">
                 <ul>
+                    <li>Veterans' mental health and safe staffing in the VA</li>
+                    <br>
+                    <li>Ending abuse of short-term rental platforms by corporations</li>
+                    <br>
+                    <li>Fair election design and abolishing the county line ballot system</li>
+                    <br>
+                    <li>Reduce or eliminate NJ Parkway tolls, especially in underserved South Jersey</li>
+                    <br>
+                    <li>Regulate green energy prices and prevent monopolies in utility pricing</li>
+                    <br>
+                    <li>Support balanced immigration reform, including due process and fair labor access</li>
+                    <br>
+                    <li>Reassess DEP-designated wetlands to unlock buildable land</li>
+                    <br>
+                    <li>Protect working-class access to housing and prevent zoning abuse</li>
+                    <br>
                     <li>Increase transparency in government and campaigning</li>
                     <br>
                     <li>Improve mental health care and reform guardianship laws (Save Nina Act)</li>
@@ -378,10 +394,10 @@
 
             <h4 class="sub-heading">Bio and Experience</h4>
                 <div class="experience can-sec">
-                    Brandon Saffold is a U.S. Army veteran, former congressional candidate, and community advocate who has remained engaged in public service, even after withdrawing from a 
-                    previous race due to family health issues. A member of the LGBTQ+ community and a proud representative of Gen Z, Brandon brings firsthand experience with mental health 
-                    care failures in New Jersey, inspiring his commitment to legislative reform. His campaign emphasizes fiscal responsibility, accessibility, and support for vulnerable 
-                    populations.
+                    Brandon Saffold is a Coast Guard veteran, Princeton University student, and former congressional candidate who grew up in Cape May County. A proud member of the LGBTQ+ 
+                    community and Gen Z, Brandon brings firsthand experience with both military service and New Jersey’s healthcare shortcomings, particularly around mental health access for 
+                    veterans. His campaign blends a boots-on-the-ground understanding of immigration, housing, and infrastructure with a commitment to fiscal responsibility, accessibility, 
+                    and advocacy for underserved communities.
                 </div>
    
     </div>
