first half of saffold and rush summarized and added to summary chart

--- a/child_pages/cc-elections/Candidates/rush.html
+++ b/child_pages/cc-elections/Candidates/rush.html
@@ -268,11 +268,47 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
-                <td>0:00</td>
-                <td>Introductions</td>
-                <td>Candidates explain who they are, why they're running, and how transparency drives their campaigns.</td>
-              </tr>
+                <tr>
+                    <td>0:00 – 6:00</td>
+                    <td>Intro / Voter Access</td>
+                    <td>Steven explains the origin of InformTheVoteNJ and the difficulty in accessing timely info on candidates; praises Saffold and Rush for showing up and being transparent.</td>
+                </tr>
+                <tr>
+                    <td>6:00 – 13:00</td>
+                    <td>Candidate Bios</td>
+                    <td>Saffold shares Coast Guard, veteran experience, and Princeton background. Rush shares engineering career, EZ-Pass project, and transition into politics after retiring.</td>
+                </tr>
+                <tr>
+                    <td>14:00 – 20:00</td>
+                    <td>Veterans / Safe Staffing</td>
+                    <td>Both support better VA staffing, access to mental healthcare, and similar efforts in civilian elder care. Mention of existing bills A3683/S2700.</td>
+                </tr>
+                <tr>
+                    <td>20:00 – 36:00</td>
+                    <td>County Line Reform</td>
+                    <td>Rush explains the system and lawsuit she joined with Andy Kim. Both oppose the "county line" ballot design and support statewide office-block format.</td>
+                </tr>
+                <tr>
+                    <td>36:00 – 47:00</td>
+                    <td>Affordable Housing</td>
+                    <td>Saffold proposes the “Coastal Housing Act” to restrict corporate abuse of Airbnb. Rush focuses on enforcing Mount Laurel doctrine and rezoning reform.</td>
+                </tr>
+                <tr>
+                    <td>47:00 – 57:00</td>
+                    <td>Immigration</td>
+                    <td>Both support the Immigrant Trust Directive, legal protections for asylum seekers, and due process. Brandon shares Coast Guard experiences on migrant interdiction.</td>
+                </tr>
+                <tr>
+                    <td>57:00 – 1:04:00</td>
+                    <td>Tolls and Transit</td>
+                    <td>Saffold supports reducing or eliminating tolls; Rush supports tolls but demands better reinvestment in South Jersey. Both criticize misuse of funds.</td>
+                </tr>
+                <tr>
+                    <td>1:04:00 – 1:07:30</td>
+                    <td>Green Energy Pricing</td>
+                    <td>Saffold proposes legislation to prevent profiteering from state-funded green energy projects; Rush agrees pricing must be fair and regulated.</td>
+                </tr>
+              
               <tr>
                 <td>1:07:47</td>
                 <td>Fiscal Outlook</td>
@@ -381,6 +417,16 @@
             <h4 class="sub-heading">Issue Stances</h4>
             <div class="experience can-sec">
                 <ul>
+                    <li><strong>Tolls:</strong> Supports keeping toll roads but ensuring revenue is used locally and fairly.</li>
+                    <li><strong>Immigration Focus:</strong> Emphasizes the need for more immigration judges and due process; skeptical of ICE practices without warrants.</li>
+                    <li><strong>Zoning and Mount Laurel:</strong> Prioritizes enforcement of affordable housing quotas and zoning reform at the municipal level.</li>
+
+                    <li><strong>Safe Staffing:</strong> Support legislation improving patient-to-staff ratios, particularly in VA and elder care settings.</li>
+                    <li><strong>Affordable Housing:</strong> Support stronger enforcement of existing mandates and restrictions on abusive short-term rentals.</li>
+                    <li><strong>Ballot Reform:</strong> Support abolishing the county line system and promoting office block ballot structure.</li>
+                    <li><strong>Immigration:</strong> Support due process for immigrants, protection of legal workers, and humane asylum processing.</li>
+                    <li><strong>Green Energy:</strong> Support renewable energy, but oppose private profit on taxpayer-funded infrastructure; want regulation on pricing.</li>
+
                     <li><strong>Fiscal Responsibility:</strong> Oppose vague tax-cut rhetoric; support transparent budgeting.</li>
                     <li><strong>Reproductive Rights:</strong> Support abortion rights with medical viability as a possible limit.</li>
                     <li><strong>Mental Health & Long-Term Care:</strong> Advocate for reform, oversight, and patient-first policies.</li>
