--- a/index.html
+++ b/index.html
@@ -176,11 +176,46 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr>
-                    <td>0:00</td>
-                    <td>Introductions</td>
-                    <td>Candidates explain who they are, why they're running, and how transparency drives their campaigns.</td>
-                </tr>
+                    <tr>
+                        <td>0:00 – 6:00</td>
+                        <td>Intro / Voter Access</td>
+                        <td>Steven explains the origin of InformTheVoteNJ and the difficulty in accessing timely info on candidates; praises Saffold and Rush for showing up and being transparent.</td>
+                    </tr>
+                    <tr>
+                        <td>6:00 – 13:00</td>
+                        <td>Candidate Bios</td>
+                        <td>Saffold shares Coast Guard, veteran experience, and Princeton background. Rush shares engineering career, EZ-Pass project, and transition into politics after retiring.</td>
+                    </tr>
+                    <tr>
+                        <td>14:00 – 20:00</td>
+                        <td>Veterans / Safe Staffing</td>
+                        <td>Both support better VA staffing, access to mental healthcare, and similar efforts in civilian elder care. Mention of existing bills A3683/S2700.</td>
+                    </tr>
+                    <tr>
+                        <td>20:00 – 36:00</td>
+                        <td>County Line Reform</td>
+                        <td>Rush explains the system and lawsuit she joined with Andy Kim. Both oppose the "county line" ballot design and support statewide office-block format.</td>
+                    </tr>
+                    <tr>
+                        <td>36:00 – 47:00</td>
+                        <td>Affordable Housing</td>
+                        <td>Saffold proposes the “Coastal Housing Act” to restrict corporate abuse of Airbnb. Rush focuses on enforcing Mount Laurel doctrine and rezoning reform.</td>
+                    </tr>
+                    <tr>
+                        <td>47:00 – 57:00</td>
+                        <td>Immigration</td>
+                        <td>Both support the Immigrant Trust Directive, legal protections for asylum seekers, and due process. Brandon shares Coast Guard experiences on migrant interdiction.</td>
+                    </tr>
+                    <tr>
+                        <td>57:00 – 1:04:00</td>
+                        <td>Tolls and Transit</td>
+                        <td>Saffold supports reducing or eliminating tolls; Rush supports tolls but demands better reinvestment in South Jersey. Both criticize misuse of funds.</td>
+                    </tr>
+                    <tr>
+                        <td>1:04:00 – 1:07:30</td>
+                        <td>Green Energy Pricing</td>
+                        <td>Saffold proposes legislation to prevent profiteering from state-funded green energy projects; Rush agrees pricing must be fair and regulated.</td>
+                    </tr>
                 <tr>
                     <td>1:07:47</td>
                     <td>Fiscal Outlook</td>
